# ChatBots.Api.FastApi

./: .dockerignore  Dockerfile  README.md  appsettings.Development.json  appsettings.json  cmd  di.py  pyproject.toml  request.json
.github/workflows/: build.yml  cd.yml  ci.yml  docker-build.yml
requests/: test.http
requests/line-messaging/: line-messaging.http
src/: __main.py  contracts.py  endpoints.py  hosting.py  line.py  main.py  middlewares.py  services.py  web.py
src/builder/: WebApplication.py  WebApplicationOptions.py  __init__.py
src/chartbots_fastapi/: __init__.py
src/configuration/: __init__.py  abstractions.py
src/contracts/: ErrorResponse.py  LineMessagingRequest.py  LineMessagingResponse.py  __init__.py
src/dependency_injection/: ServiceCollection.py  ServiceDescriptor.py  ServiceLifetime.py  ServiceProvider.py  __init__.py  abstractions.py
src/dependency_injections/: ServiceCollection.py  ServiceDescriptor.py  ServiceLifetime.py  ServiceProvider.py  __init__.py  abstractions.py
src/domain/: LineBotService.py  __init__.py  abstractions.py
src/endpoints/: ApiTags.py  Endpoint.py  LineMessagingEndpoint.py  __init__.py
src/hosting/: __init__.py  abstractions.py
src/identity/: CurrentUser.py  __init__.py
src/infrastructure/resources/: ResourceService.py  __init__.py  contracts.py
src/infrastructure/resources/contracts/: users.py
src/line/messaging/: __init__.py
src/middlewares/: RequestDebuggingMiddleware.py  __init__.py
src/open_api/: __init__.py
src/services/: __init__.py
src/shared_kernel/: Entity.py  Error.py  Result.py  SingleValueObject.py  ValueObject.py  __init__.py  abstractions.py
src/shared_kernel/monad/: Result.py  __init__.py
src/usecases/: CommandSender.py  __init__.py  abstractions.py  users.py
src/usecases/users/: GetUserCommandHandler.py  ListUsersCommandHandler.py  __init__.py
tests/: test_dependency_injection.py
tests/unit_tests/confguration/: ConfigurationTests.py
tests/unit_tests/dependency_injection/: ServiceCollectionTests.py
tests/unit_tests/dependency_injections/: test_dependency_injection.py
tests/unit_tests/shared_kernel/: EntityTests.py  ErrorTests.py  ResultTests.py  SingleValueObjectTests.py  ValueObjectTests.py  test_error.py  test_result.py
(+2 files in other folders)
