[project]
name = "chartbots-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "line-bot-sdk>=3.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.rye.scripts]
dev = "python ./src/main.py --environment Development --watch"
start = "python ./src/main.py --host 0.0.0.0 --port 10004 --environment Production"

