[project]
name = "richillcapital-chat-bots"
version = "1.0.0"
description = ""
authors = [
    { name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "line-bot-sdk>=3.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "sure>=2.0.1",
    "assertpy>=1.1",
]

[tool.rye.scripts]
dev = "python ./src/main.py --environment Development --watch"
start = "python ./src/main.py --host 0.0.0.0 --port 10004 --environment Production"
lint = "ruff check ./src"
unit_test = "pytest ./tests"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = "./src"
python_files = "*Tests.py"
python_classes = "*Tests"
python_functions = "test_*"
